--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.17.1",
     "mysql": "^2.18.1",
     "portal-vue": "^2.1.7",
     "uuid": "^8.2.0",
